# easy_cube

./: README.md  app.vue  index.html  main.js  package.json
rest_server/: .gitignore  app.py  requirements.txt  server.log.2019-12-06_20-44-57
rest_server/colordetect/: cnn_demo.py  cnn_detector.py  cnn_model.py  colordetect_experiment.ipynb  knn_detector.py  prepare_data.py  utils.py
rest_server/colordetect/.ipynb_checkpoints/: colordetect_experiment-checkpoint.ipynb
rest_server/colordetect/label/: label_block.tsv  label_picture.tsv  label_video.tsv
rest_server/colordetect/models/: best_model  cv_result.txt
rest_server/cube_solver/: coverage.py  lbl.py  solver.py
rest_server/cube_solver/lbl_wrapper/: .lblcube.cpp.cppimporthash  .rendered.lblcube.cpp  CMakeLists.txt  lblcube.cpp  setup.py
rest_server/cube_solver/lbl_wrapper/lblcube.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
rest_server/cube_solver/problems/: problem_cache.pkl
